# IFoT-middleware

./: .gitignore  README.md  docker-compose.yml  stack-frontend.txt
aggregator/: Dockerfile  requirements.txt  tasks.py  worker.py
backend/: ActivityRecog_Tasks.py  Dockerfile  HEATMAP_Tasks.py  NUTS_Funcs.py  NUTS_Tasks.py  SMARTHOME_Tasks.py  VASMAP_Tasks.py  requirements.txt  rf_exe  tasks.py  worker.py
backend_uniq/: VASMAP_Tasks.py  requirements.txt  worker.py
common/: defs.py  mqtt_utils.py  utils.py
frontend/: Dockerfile  manage.py  requirements.txt
frontend/project/client/static/: main.css  main.js
frontend/project/client/templates/: _base.html  footer.html
frontend/project/client/templates/main/: home.html  nuts.html  upload.html
frontend/project/server/: __init__.py  config.py  database.py
frontend/project/server/api/: metas.py  utils.py  views.py
frontend/project/server/api/services/: vas.py
frontend/project/server/forms/: upload_form.py
frontend/project/server/main/: funcs.py  models.py  mqtt_utils.py  rsu_info.json  tasks.py  views.py
frontend/project/server/main/lynx-python/: README.md  setup.cfg
frontend/project/server/main/lynx-python/lynx/influxdb/: client.py  parse.py
frontend/project/server/main/lynx-python/lynx/machine_learning/: evaluation.py
frontend/project/server/main/lynx-python/tests/: test_influxdb_client.py
frontend/project/server/models/: __init__.py  models.py
frontend/project/server/services/: .vas.py.swp  actv_reg.py  defs.py  dist_rf.py  vas.py
redis_dashboard/: Dockerfile
