[metadata]
name = lynx
version = 0.0.1
url = https://github.com/ubi-naist/lynx-python
author = Wataru Sasaki
author_email = sasaki.wataru.sl9@is.naist.jp
license = MIT License
description = Lynx package
long_description = file: README.md
test_suite = tests

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    pandas
    sklearn
    keras
    matplotlib
    seaborn
    influxdb


[options.packages.find]
exclude =
    tests
